--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
     </div>
     </div>
     </div>
+   
     <script type="module" src="index.js"></script>
+    <script type="module" src="env.js"></script>
 </body>
 </html>
